--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Finance Hacks</name>
   <description>Bunch of little scripts to optimize accounts</description>
+  <dependencies>
+  	<dependency>
+  		<groupId>me.figo</groupId>
+  		<artifactId>sdk</artifactId>
+  		<version>1.2.8</version>
+  	</dependency>
+  </dependencies>
 </project>
