--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>eu.erbs</groupId>
-  <artifactId>finance-hacks</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>Finance Hacks</name>
-  <description>Bunch of little scripts to optimize accounts</description>
-  <dependencies>
-  	<dependency>
-  		<groupId>me.figo</groupId>
-  		<artifactId>sdk</artifactId>
-  		<version>1.2.8</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>eu.erbs</groupId>
+	<artifactId>finance-hacks</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>Finance Hacks</name>
+	<description>Bunch of little scripts to optimize accounts</description>
+	<dependencies>
+		<dependency>
+			<groupId>me.figo</groupId>
+			<artifactId>sdk</artifactId>
+			<version>1.2.8</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.5</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.5.0-b01</version>
+		</dependency>
+	</dependencies>
 </project>
