--- a/src/main/resources/accountnotification.properties
+++ b/src/main/resources/accountnotification.properties
@@ -1,10 +1,10 @@
-CLIENT_ID=
-CLIENT_SECRET=
+CLIENT_ID=CaESKmC8MAhNpDe5rvmWnSkRE_7pkkVIIgMwclgzGcQY
+CLIENT_SECRET=STdzfv0GXtEj_bwYn7AgCVszN1kKq5BdgEIKOM_fzybQ
 
-FIGO_USER=
-FIGO_PASSWORD=
-ACCOUNT_GIRO=
+FIGO_USER=demo@figo.me
+FIGO_PASSWORD=demo1234
+ACCOUNT_GIRO=A1.1
 
 NOTIFICATION_FREQUENCY_DAYS=7
 
-MAIL_RECIPIENT=
+MAIL_RECIPIENT=demo@figo.me
